--- a/superembed-4k-app/package.json
+++ b/superembed-4k-app/package.json
@@ -9,19 +9,32 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.17",
+    "autoprefixer": "^10.4.22",
     "axios": "^1.13.2",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.23.26",
     "hls.js": "^1.6.15",
+    "lucide-react": "^0.559.0",
     "next": "16.0.8",
+    "postcss": "^8.5.6",
     "puppeteer": "^24.32.1",
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
     "react": "19.2.1",
     "react-dom": "19.2.1",
-    "react-player": "^3.4.0"
+    "react-player": "^3.4.0",
+    "swiper": "^12.0.3",
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
     "@playwright/test": "^1.57.0",
+    "@types/node": "^24.10.2",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
     "eslint": "^9",
-    "eslint-config-next": "16.0.8"
+    "eslint-config-next": "16.0.8",
+    "typescript": "^5.9.3"
   }
 }
