--- a/superembed-4k-app/package.json
+++ b/superembed-4k-app/package.json
@@ -15,6 +15,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.26",
     "hls.js": "^1.6.15",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.559.0",
     "next": "16.0.8",
     "postcss": "^8.5.6",
